ui: fixed spacing at the top of some dialogs

--- a/indoktrinator/static/css/indoktrinator.css
+++ b/indoktrinator/static/css/indoktrinator.css
@@ -113,3 +113,8 @@ h1.editable {
     border: 4px dotted #aaa;
     color: #eee;
 }
+
+.container.no-title,
+.container-fluid.no-title {
+    padding-top: 20px;
+}
